--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
     display: flex;
     flex-wrap: wrap;
     float: left;
-    border: 1px solid black;
+    border: 3px solid black;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -21,6 +21,9 @@
     height: 30%;
     text-align: center;
     font-size: 80px;
+    color: blue;
+    border-color: blueviolet;
+    border-radius: 2px;
     
 
 }
